# bi-engineer-assessment

./: .gitignore  README.md  ingest.yaml  main.py  metrics.sql  pyproject.toml  requirements.txt  results-nb.ipynb
src/: utils.py
